# aoc2023

./: .gitignore  Cargo.toml  README.md  Trunk.toml
.github/workflows/: pages.yaml
app/: Cargo.toml  index.html
app/src/: main.rs
app/static/: reset.css  style.css
solutions/: Cargo.toml
solutions/src/: day_1.rs  day_10.rs  day_11.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  day_x.rs  examples.rs  input.rs  lib.rs  solvers.rs
web/: Cargo.toml
web/src/: dom_ref.rs  event.rs  lib.rs  state.rs  ui.rs
