[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
solutions = { path = "../solutions" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web = { path = "../web" }
wasm-bindgen-futures = "0.4.39"
