[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-utils = "0.2.0"
gloo-events = "0.2.0"
gloo-console = "0.3.0"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
futures = "0.3.29"
solutions = { path = "../solutions" }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.66"
features = ["Window", "Element", "HtmlDivElement", "HtmlButtonElement", "HtmlTextAreaElement"]
